--- a/it_service_app/appsettings.json
+++ b/it_service_app/appsettings.json
@@ -9,6 +9,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "IyzicoOptions": {
+    "ApiKey": "sandbox-yWq16XzTIvhyhEjkJZd8zmyQEGFnEiLK",
+    "SecretKey": "sandbox-CS0zLO0iioSCDNCIjyUYPCGJWAFgYlRQ",
+    "BaseUrl": "https://sandbox-api.iyzipay.com"
+  },
   "AllowedHosts": "*",
   "EmailOptions": {
     "SenderMail": "wissen.webmobil@gmail.com",
