--- a/it_service_app/package.json
+++ b/it_service_app/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "devextreme": "^21.2.5",
     "devextreme-aspnet-data": "^2.8.6",
-    "jquery": "^3.6.0"
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
+    "jquery": "^3.6.0",
+    "jszip": "^3.7.1"
   }
 }
